[package]
name = "gameoff_2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[target.x86_64-pc-windows-msvc.dependencies]
bevy = { version = "0.11.3", features = ["dynamic_linking"] }
bevy_ecs = "0.11.0"
rand = "0.8.5"
bevy-inspector-egui = "0.20.0"

[target.wasm32-unknown-unknown.dependencies]
bevy = { version = "0.11.3" }
bevy_ecs = "0.11.0"
rand = "0.8.5"
bevy-inspector-egui = "0.20.0"